Fix small screen grid overflow.

--- a/http/components/overview/overview.scss
+++ b/http/components/overview/overview.scss
@@ -75,7 +75,7 @@
 
     display: grid;
     gap: 3.6rem clamp(2.4rem, 4vw, 3.6rem);
-    grid-template-columns: repeat(auto-fill, minmax(22rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(m#{i}n(22rem, 100%), 1fr));
     grid-auto-flow: dense;
     margin-block: 3.6rem;
     margin-inline: auto;
@@ -85,7 +85,7 @@
     }
 
     .overview--large & {
-      grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(m#{i}n(30rem, 100%), 1fr));
     }
 
     .overview--condense & {
